Added translations for 'last' and 'first' pagination links.

--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -155,6 +155,8 @@ fi:
     pagination:
       previous: "&lt; Edellinen"
       next: "Seuraava &gt;"
+      first: "« Ensimmäinen"
+      last: "Viimeinen »"
   
   member:
     position:
