Added translation for Kaminari's truncate.

--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -157,6 +157,7 @@ fi:
       next: "Seuraava &gt;"
       first: "« Ensimmäinen"
       last: "Viimeinen »"
+      truncate: "..."
   
   member:
     position:
